# hay_flags

./: CMakeLists.txt  README.md
.hooks/: post-commit  pre-commit  pre-push
.woodpecker/: man.yml  test.yml  test_and_man.yml
include/hay/: flags.h
man/: hay_flags.3  hay_flags.md
src/: flags.c
tests/: test_flags.c  test_flags_create.c  test_flags_get_check.c  test_flags_get_check_err.c  test_flags_get_idx.c  test_flags_get_idx_err.c  test_flags_get_val.c  test_flags_get_val_err.c  test_flags_getb_np.c  test_flags_getb_p.c  test_flags_getbool_np.c  test_flags_getbool_p.c  test_flags_getint_np.c  test_flags_getint_p.c  test_flags_getnull_np.c  test_flags_getnull_p.c  test_flags_getstr_np.c  test_flags_getstr_p.c  test_flags_parse.c
